src/test/ui/parser/issue-20711.stderr
error: expected item after attributes
  --> $DIR/issue-20711.rs:4:5
   |
LL |     #[stable(feature = "rust1", since = "1.0.0")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

